ignore random code snippets

--- a/web/webImageBrowser/PackagingLog.html
+++ b/web/webImageBrowser/PackagingLog.html
@@ -4,6 +4,7 @@ Compiler version: 8.0 (R2020a)
 
 Dependency analysis by REQUIREMENTS.
 
+Warning: Excluded "C:/Program Files/MATLAB/R2020a/toolbox/images/imuitools/imageBrowser.m"; reason: The file or function has been excluded from packaging for the "MCR" target environment according to the "Compiler" license.  Either remove the file or function from your code, or use the MATLAB function "isdeployed" to ensure the function is not invoked in the deployed component.
 Warning: Excluded "C:/Program Files/MATLAB/R2020a/toolbox/images/imuitools/imtool.m"; reason: The file or function has been excluded from packaging for the "MCR" target environment according to the "Compiler" license.  Either remove the file or function from your code, or use the MATLAB function "isdeployed" to ensure the function is not invoked in the deployed component.
 Warning: Excluded "C:/Program Files/MATLAB/R2020a/toolbox/images/imuitools/imview.m"; reason: The file or function has been excluded from packaging for the "MCR" target environment according to the "Compiler" license.  Either remove the file or function from your code, or use the MATLAB function "isdeployed" to ensure the function is not invoked in the deployed component.
 Parsing file "B:\iset\isetcam\web\webImageBrowser.mlapp"
@@ -14,5 +15,5 @@ Creating the bundle...
 Creating the install agent URL file...
 Web based installer created at s:\code\iset\webImageBrowser\for_redistribution\MyAppInstaller_web.exe.
 Packaging complete.
-Elapsed packaging time was: 2 minutes and 29 seconds.
+Elapsed packaging time was: 2 minutes and 27 seconds.
 </pre></html>
